[ci skip] Update run configurations